--- a/MODAMSWeb/Views/Shared/_DatatablesAssets.cshtml
+++ b/MODAMSWeb/Views/Shared/_DatatablesAssets.cshtml
@@ -1,6 +1,7 @@
 ﻿<link rel="stylesheet" href="https://cdn.datatables.net/1.13.8/css/dataTables.bootstrap5.min.css" />
 <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.4.2/css/buttons.bootstrap5.min.css" />
 <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.5.0/css/responsive.bootstrap5.min.css" />a
+<link href="~/css/custom_datatables.css" rel="stylesheet" />
 
 <script src="~/assets/plugins/datatable/js/jquery.dataTables.min.js"></script>
 <script src="~/assets/plugins/datatable/js/dataTables.bootstrap5.js"></script>
